# kiotty-discovery

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: kiotty_discovery_client.hpp  kiotty_discovery_server.hpp
src/client/: kiotty_discover_client.cpp
src/protocol/: kiotty_discovery_protocol.hpp
src/server/: kiotty_discover_server.cpp
test/: CMakeLists.txt  integration.cpp
